# ChangeLog for dev-ruby/toml
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/toml/ChangeLog,v 1.7 2014/08/11 01:18:17 mrueg Exp $

  11 Aug 2014; Manuel Rüger <mrueg@gentoo.org> toml-0.1.1.ebuild:
  Use correct gemspec.

  11 Aug 2014; Manuel Rüger <mrueg@gentoo.org> toml-0.1.1.ebuild:
  Fix sed expression for parslet.

  11 Aug 2014; Manuel Rüger <mrueg@gentoo.org> toml-0.1.1.ebuild:
  Further fixes to run tests natively, drop version dependency on parslet.

  06 Aug 2014; Manuel Rüger <mrueg@gentoo.org> toml-0.1.1.ebuild:
  Add ruby21 target.

  28 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -toml-0.1.0.ebuild:
  Cleanup old.

*toml-0.1.1 (20 Feb 2014)

  20 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +toml-0.1.1.ebuild:
  Version bump.

*toml-0.1.0 (13 Dec 2013)

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +toml-0.1.0.ebuild:
  Initial ebuild.