@@ -1,4 +1,6 @@
 DIST toml-0.1.1.gem 15360 SHA256 e8721879bc79f21924e2b876801526ac4e2bf08785dcfb45066f2d8b8dd9add4 SHA512 0f38dd751e36398d39a95c05ea88e45a021116736521cb1ea5fcf1b39d030439228caa9094da86d71d2bdc3cce5eec7bfdc36dbf6a050f67d8bf97771a7d585c WHIRLPOOL 20375c77d2e7f5b87b971f0fc897f581f5d81536fa67b55bad9f95140ab8de9490262e452312a81fb34a20256ed491ee76b58bf626a1506a4b72f6d34167f25f
+DIST toml-0.1.2.tar.gz 10931 SHA256 8dec07fecf63c39fb00151f1823f3e23651c5c79f3c5ce9af7cb689a0de770a5 SHA512 fb0297533cf2167372ea303b81da4a39b9c17c2a8d3def176d0c54b922219fd78abf79b1f13205ef6b2109c1154158c9cfedc73b3b2502d9262f3ee831feccea WHIRLPOOL d4fd18b40d880111c9a7ee8454df8f79a76e9caf32143ea5ce3f4a6828f8f7669a15f33664b340d16bd2e025b612fde2b1ce68445b045837cfcdd2e49b64fd26
 EBUILD toml-0.1.1.ebuild 985 SHA256 af4e6059a0075c05fc3f6cb395c79d0021a11f542097e9d7381efc7d89c0b1d4 SHA512 e7816696062661230e87324005d2ff1599e760f10066582635cde51d12a9d00212f9c2e3808659dfe56e9a1f52fb328a4f42d483d45d795394c7d53c495fc53d WHIRLPOOL 58ea028ddd374673f0e727f3a75f8700027bb523b4fb47a3221be202d2fc99d9f82facb530d88db7594e71c977e6b34528563aa001fbf4bf11dc387509a35027
-MISC ChangeLog 949 SHA256 8283af70a0eb53412b61fbe55cc322c2e20c353bf4081ef227250bee594ecd0e SHA512 40df363b72130aafcd66fd0bf2f170cce681dc8091006331a3f82d37fb910b041773e0b62825d716a409e84f8eaed3671093ecf520fa488e9bdb321116631e22 WHIRLPOOL be6d8322f935ccff88b94ac5d32dc379f1540222e5a0303fd6d9b591cae8a9fa88ad0e1296fa60dedc0ea8b7f3a4667a45997f043d956df7cbb185481e1ba9fe
+EBUILD toml-0.1.2.ebuild 1059 SHA256 ae8dad282309c5e3a596a6d96352520f33ee952f7368008c30ed54004696112d SHA512 508b15d46814386b21b4d73249f82e3618d17b56dd377f190ae64ca0e53f181566f1c643fd7b8688e6756f131bad2dfdb5b077f76bbfb7e0ec838872ef341292 WHIRLPOOL 5dc8cdb6489610783c9e1bf46ec711dbbdd6ae47291fe79fdbe7ea52d0a3effcc0c6ad0b4032fbc14955cdd3fd293f9776b9f8f6365a210775c088d20799a5a8
+MISC ChangeLog 1061 SHA256 f226d1bc5b2938f882993cda874cea69ce3d733bc451d23fbf2b3f77754a93a4 SHA512 97ff1570e7a83c52239709e98c536a4a3183954b718b787e7da77789e156cb0d93ddf89a6d3fdbc37f5f59700e65c1c1813d9b634defd02fceefaa93bc80de98 WHIRLPOOL 9efc4ea217cac4c651b79c8411713041fb7147e67f8c003efb89617e4131ba0ad53a1ba4126810af36853aff303da5508cafc2ad6df0022af15192f308f1d1b6
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
