@@ -1,4 +1,6 @@
 DIST jekyll-sitemap-0.6.0.tar.gz 61470 SHA256 490b39514cdf9930ebddce32f1f34530ce5ecaba455424b51bd12324266164be SHA512 101a83c6e86329de33877c2d4aadf2b1c381a291453d8fd59ea57d4feaa549d3456cedf51d422a5c917941a0cfec6a877b605177bd9846c6fc68ef4935a1e046 WHIRLPOOL c748fbc6954d00d6e22998086b30d19a8d1c42c12027e41d07c8bba1bc03ff4823d1c3313eb2706333c4c206c3388965a6cba6c6cae3f2b596134e43c10e1c81
+DIST jekyll-sitemap-0.6.1.tar.gz 61601 SHA256 734aa73373e22a02f958eb8c7e96f9dde3adb500be230eaf03d4594d9e46cf4a SHA512 439defa1dce33fb38cc19ad2ba51ef9153dd600946d1fa12a0b174089da35b6e758ff84f7e399445495ea104ca72f8542a7eb4a4e968735907a6b3a9d7909c2a WHIRLPOOL 674b45fa2cae87e63906baa18b9ee4e9d6495476e3d1c1398aa53d827cce91ea191dd6a4383a47d491ac49a4d6aac3ac72f802b0ee65b4e5b405252cdd76d8e2
 EBUILD jekyll-sitemap-0.6.0.ebuild 851 SHA256 cf0a6d6f711b5feccdc49197b5d74c4d383d8a0da7b48929f011a8d92a092d2e SHA512 a932d4138e0d056bda10d82cad637ddec8f5530d05d904ff215c1b45b5aecf7ff4d884c338342d7200281a091af4f00d4d7e1492d93a16ca7169cb586956e6e1 WHIRLPOOL 34a2f752974373db4ab3040d58801e96ac855352b7f23e2a28d84c77041d909f167ea239c42c8b370ad3d519036538bbd389bdfd3703288a8e5d8d965116711c
-MISC ChangeLog 546 SHA256 56e506a6f0cd1378afb71fde81d6750344ae8b04a9bd5667340d3b9f9c87b885 SHA512 9881b40037fa58a3a34335c85b66d8a1a7872f7e1e3ab9ad235e96019351bbef71666dc0cb7b7547da8f1d70f5e7f7b629e58f9c8aae9ce26615a32f0f194fc6 WHIRLPOOL 56380eece2fb44ff4e55bb79c110aee40e4ff734a967eb323870632173846f5443e85fa54372a1e0e810d6630337a2e89214029cadc840bfecd744a310761702
+EBUILD jekyll-sitemap-0.6.1.ebuild 851 SHA256 a71e1e16c7de75b4ae4ed893e063f9c357ead6af15c7def8b61d57bf4b422eb1 SHA512 8bdd3edda34bef6f2ccd67ac6cdbe3b527583926807862a2195947be9354e806348babdafbd0f3f4f4da81a3b424e54686f5cc6d9554eeeb96fe4143242d46fd WHIRLPOOL 1b4842d0a3e01705452f899c31e184950aae114a4e7db6a9a6371145c478cbc416cbfd2819f9579ed7aeda3379552bbf05460d41ff50a22d8ac0d46825ac7f72
+MISC ChangeLog 678 SHA256 4dde36f79f4051a3162971c8198e1272c53b9c6d97d9ead935279acf49179050 SHA512 27b68a3fc5bb92d8361033a65fa1ec9059900944781781cf6140b5e11d2bab56e6657412c6f68be174b4673e0435549e237b75536d860a5a9921c9dad5365e53 WHIRLPOOL 3af2eaf2e635ecf16ef39b4db77e4dcd19e100a91010ad1fea03986f63ce9eba9da895372ba12c71624c142622fe6278d0fd3ea9910ba9c1552d8900461f7811
 MISC metadata.xml 231 SHA256 9c04e1ed256c8293b1120d9b56de16e3ee5ff6cdb3967d517d46c5974c23d67a SHA512 0aaf70d152f2b3a4b333fccde6f5c9fbb6cac1a9ecf3e2b2ddb57a1c260b3f0e7bdd215edad17f959b2a3324929bf446164341531783431c3435d1b956d09d83 WHIRLPOOL d631165d8a2dd82731e34fed2e3c09437b8c0d383da28c3e0a5f704196afc1810a7efee388e6b558493e82fa61cc799ab3b93eb1b7b17464dd380efdcba60d06
