@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/toml
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/toml/ChangeLog,v 1.7 2014/08/11 01:18:17 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/toml/ChangeLog,v 1.8 2014/10/21 13:44:58 mrueg Exp $
+
+*toml-0.1.2 (21 Oct 2014)
+
+  21 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +toml-0.1.2.ebuild:
+  Version bump.
 
   11 Aug 2014; Manuel Rüger <mrueg@gentoo.org> toml-0.1.1.ebuild:
   Use correct gemspec.
